--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">P.O. Box 123321 Sandusky, OH 44444</span></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">sbmscholarshipfund@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">blitzback93@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
